Fixed image covering all text

--- a/styles/style.index.css
+++ b/styles/style.index.css
@@ -4,7 +4,7 @@ html{
 }
 body {
     width: 1000px;
-    background-color: #f0f0f0;
+    background-color: #f0f0f0 !important;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 100%;
 
@@ -13,7 +13,7 @@ body {
     border: 1px black;
     border-radius: 25px;
     box-shadow: 5px 5px 0 0;
-    background: url(/images/Edelbrock-Logo-Vector-scaled.jpg),url(/images/HLLY_BIG-87c8206e.png);
+    background: url(/images/Edelbrock-Logo-Vector-scaled.jpg),url(/images/HLLY_BIG-87c8206e.png) right repeat-y;
     background-size: 25% 25%;
     background-attachment: fixed fixed;
     background-position: top bottom;
